Fix input being too small

--- a/src/styles/partials/_components.scss
+++ b/src/styles/partials/_components.scss
@@ -50,6 +50,10 @@ header {
             text-overflow: ellipsis;
             line-height: 6rem;
         }
+
+        input {
+            height: 84px;
+        }
     }
 }
 
