--- a/src/styles/partials/_input.scss
+++ b/src/styles/partials/_input.scss
@@ -11,7 +11,6 @@ textarea {
     margin: 0 0 8px 0;
     padding: 0;
     box-shadow: none;
-    box-sizing: content-box;
     transition: box-shadow 0.3s, border 0.3s;
 }
 
